--- a/ide/debugoptionsfrm.lfm
+++ b/ide/debugoptionsfrm.lfm
@@ -19,22 +19,23 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
     Anchors = [akTop, akLeft, akRight, akBottom]
     BorderSpacing.Around = 6
     PageIndex = 3
+    AnchorSideBottom.Control = cmdOK
     Left = 6
-    Height = 394
+    Height = 400
     Top = 6
     Width = 479
     object pgGeneral: TPage
-      Caption = 'General'
+      Caption = 'Page1'
       ClientWidth = 471
-      ClientHeight = 368
-      Height = 368
+      ClientHeight = 374
+      Height = 374
       Width = 471
       object gbDebuggerType: TGroupBox
         Align = alTop
         BorderSpacing.Around = 6
         Caption = 'Debugger type and path'
-        ClientHeight = 90
-        ClientWidth = 459
+        ClientHeight = 72
+        ClientWidth = 455
         ParentCtl3D = False
         TabOrder = 0
         Left = 6
@@ -43,6 +44,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         Width = 459
         object cmbDebuggerType: TComboBox
           Anchors = [akTop, akLeft, akRight]
+          AutoCompleteText = [cbactEndOfLineComplete, cbactSearchAscending]
           MaxLength = 0
           OnChange = cmbDebuggerTypeCHANGE
           ParentCtl3D = False
@@ -50,17 +52,18 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Left = 6
           Height = 21
           Top = 8
-          Width = 442
+          Width = 438
         end
         object cmbDebuggerPath: TComboBox
           Anchors = [akTop, akLeft, akRight]
+          AutoCompleteText = [cbactEndOfLineComplete, cbactSearchAscending]
           MaxLength = 0
           ParentCtl3D = False
           TabOrder = 1
           Left = 6
           Height = 21
           Top = 40
-          Width = 417
+          Width = 413
         end
         object cmdOpenDebuggerPath: TButton
           Anchors = [akTop, akRight]
@@ -68,7 +71,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Caption = '...'
           OnClick = cmdOpenDebuggerPathCLICK
           TabOrder = 2
-          Left = 425
+          Left = 421
           Height = 25
           Top = 37
           Width = 23
@@ -78,8 +81,8 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         Align = alTop
         BorderSpacing.Around = 6
         Caption = 'Additional search path'
-        ClientHeight = 56
-        ClientWidth = 459
+        ClientHeight = 38
+        ClientWidth = 455
         ParentCtl3D = False
         TabOrder = 1
         Left = 6
@@ -92,7 +95,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Left = 6
           Height = 25
           Top = 5
-          Width = 415
+          Width = 411
         end
         object cmdOpenAdditionalPath: TButton
           Anchors = [akTop, akRight]
@@ -100,7 +103,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Caption = '...'
           OnClick = cmdOpenAdditionalPathClick
           TabOrder = 1
-          Left = 425
+          Left = 421
           Height = 24
           Top = 5
           Width = 23
@@ -110,12 +113,12 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         Align = alClient
         BorderSpacing.Around = 6
         Caption = 'Debugger specific options (depends on type of debugger)'
-        ClientHeight = 136
-        ClientWidth = 459
+        ClientHeight = 124
+        ClientWidth = 455
         ParentCtl3D = False
         TabOrder = 2
         Left = 6
-        Height = 136
+        Height = 142
         Top = 226
         Width = 459
         object pnlDebugSpecific: TPanel
@@ -123,46 +126,49 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           BorderSpacing.Around = 6
           BevelOuter = bvNone
           BorderWidth = 4
-          ClientHeight = 106
+          ClientHeight = 112
           ClientWidth = 443
           FullRepaint = False
           TabOrder = 0
           TabStop = True
           Left = 6
-          Height = 106
+          Height = 112
           Top = 6
           Width = 443
         end
       end
       object gcbDebuggerGeneralOptions: TCheckGroup
         Align = alTop
+        AutoFill = True
         BorderSpacing.Around = 6
         Caption = 'Debugger general options'
-        Items.Strings = (
-          'Show message on stop'
-        )
+        ChildSizing.LeftRightSpacing = 6
+        ChildSizing.TopBottomSpacing = 6
+        ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+        ChildSizing.EnlargeVertical = crsHomogenousChildResize
+        ChildSizing.ShrinkHorizontal = crsScaleChilds
+        ChildSizing.ShrinkVertical = crsScaleChilds
+        ChildSizing.Layout = cclLeftToRightThenTopToBottom
+        ChildSizing.ControlsPerLine = 1
         TabOrder = 3
         Left = 6
         Height = 56
         Top = 164
         Width = 459
-        Data = {
-          0100000002
-        }
       end
     end
     object pgEventLog: TPage
-      Caption = 'Event Log'
+      Caption = 'Page2'
       ClientWidth = 471
-      ClientHeight = 368
-      Height = 368
+      ClientHeight = 374
+      Height = 374
       Width = 471
       object gbGeneral: TGroupBox
         Align = alTop
         BorderSpacing.Around = 6
         Caption = 'General'
-        ClientHeight = 132
-        ClientWidth = 459
+        ClientHeight = 114
+        ClientWidth = 455
         ParentCtl3D = False
         TabOrder = 0
         Left = 6
@@ -193,20 +199,20 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Left = 46
           Height = 20
           Top = 54
-          Width = 66
+          Width = 78
         end
       end
       object gbMessages: TGroupBox
         Align = alClient
         BorderSpacing.Around = 6
         Caption = 'Messages'
-        ClientHeight = 218
-        ClientWidth = 459
+        ClientHeight = 206
+        ClientWidth = 455
         Enabled = False
         ParentCtl3D = False
         TabOrder = 1
         Left = 6
-        Height = 218
+        Height = 224
         Top = 144
         Width = 459
         object chkMessagesBreakpoint: TCheckBox
@@ -275,48 +281,55 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
       end
     end
     object pgExceptions: TPage
-      Caption = 'Language Exceptions'
+      Caption = 'Page3'
       ClientWidth = 471
-      ClientHeight = 368
-      Height = 368
+      ClientHeight = 374
+      Height = 374
       Width = 471
       object bgIgnoreExceptions: TGroupBox
         Align = alClient
         BorderSpacing.Around = 6
         Caption = 'Ignore these exceptions'
-        ClientHeight = 337
-        ClientWidth = 459
+        ClientHeight = 325
+        ClientWidth = 455
         ParentCtl3D = False
         TabOrder = 0
         Left = 6
-        Height = 337
+        Height = 343
         Top = 6
         Width = 459
         object cmdExceptionRemove: TButton
           Anchors = [akRight, akBottom]
           AutoSize = True
+          BorderSpacing.Around = 6
           BorderSpacing.InnerBorder = 2
           Caption = 'Remove'
           Enabled = False
           OnClick = cmdExceptionRemoveCLICK
           TabOrder = 0
+          AnchorSideRight.Control = bgIgnoreExceptions
+          AnchorSideRight.Side = asrBottom
+          AnchorSideBottom.Control = bgIgnoreExceptions
+          AnchorSideBottom.Side = asrBottom
           Left = 385
           Height = 29
-          Top = 281
+          Top = 290
           Width = 64
         end
         object cmdExceptionAdd: TButton
           Anchors = [akRight, akBottom]
           AutoSize = True
-          BorderSpacing.Right = 6
+          BorderSpacing.Around = 6
           BorderSpacing.InnerBorder = 2
           Caption = 'Add'
           OnClick = cmdExceptionAddCLICK
           TabOrder = 1
           AnchorSideRight.Control = cmdExceptionRemove
+          AnchorSideBottom.Control = bgIgnoreExceptions
+          AnchorSideBottom.Side = asrBottom
           Left = 336
           Height = 29
-          Top = 281
+          Top = 290
           Width = 43
         end
         object clbExceptions: TCheckListBox
@@ -325,8 +338,10 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           BorderSpacing.Around = 6
           OnClick = clbExceptionsCLICK
           TabOrder = 2
+          AnchorSideRight.Side = asrBottom
+          AnchorSideBottom.Control = cmdExceptionAdd
           Left = 6
-          Height = 267
+          Height = 278
           Top = 6
           Width = 443
         end
@@ -340,51 +355,58 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         TabOrder = 1
         Left = 6
         Height = 13
-        Top = 349
+        Top = 355
         Width = 459
       end
     end
     object pgSignals: TPage
-      Caption = 'OS Exceptions'
+      Caption = 'Page4'
       ClientWidth = 471
-      ClientHeight = 368
-      Height = 368
+      ClientHeight = 374
+      Height = 374
       Width = 471
       object gbSignals: TGroupBox
         Align = alClient
         BorderSpacing.Around = 6
         Caption = 'Signals'
-        ClientHeight = 338
+        ClientHeight = 344
         ClientWidth = 455
         ParentCtl3D = False
         TabOrder = 0
         Left = 6
-        Height = 356
+        Height = 362
         Top = 6
         Width = 459
         object cmdSignalRemove: TButton
           Anchors = [akRight, akBottom]
           AutoSize = True
+          BorderSpacing.Around = 6
           BorderSpacing.InnerBorder = 2
           Caption = 'Remove'
           Enabled = False
           TabOrder = 0
+          AnchorSideRight.Control = gbSignals
+          AnchorSideRight.Side = asrBottom
+          AnchorSideBottom.Control = gbSignals
+          AnchorSideBottom.Side = asrBottom
           Left = 385
           Height = 29
-          Top = 302
+          Top = 309
           Width = 64
         end
         object cmdSignalAdd: TButton
           Anchors = [akRight, akBottom]
           AutoSize = True
-          BorderSpacing.Right = 6
+          BorderSpacing.Around = 6
           BorderSpacing.InnerBorder = 2
           Caption = 'Add'
           TabOrder = 1
           AnchorSideRight.Control = cmdSignalRemove
+          AnchorSideBottom.Control = gbSignals
+          AnchorSideBottom.Side = asrBottom
           Left = 336
           Height = 29
-          Top = 302
+          Top = 309
           Width = 43
         end
         object lvSignals: TListView
@@ -408,9 +430,11 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
               Width = 5
             end>
           PopupMenu = popSignal
+          TabOrder = 2
           ViewStyle = vsReport
+          AnchorSideBottom.Control = cmdSignalAdd
           Left = 6
-          Height = 288
+          Height = 297
           Top = 6
           Width = 443
         end
@@ -418,6 +442,9 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
     end
   end
   object cmdOK: TBitBtn
+    Anchors = [akRight, akBottom]
+    AutoSize = True
+    BorderSpacing.Around = 6
     BorderSpacing.InnerBorder = 2
     Caption = '&OK'
     Constraints.MaxHeight = 29
@@ -426,14 +453,19 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
     NumGlyphs = 0
     OnClick = cmdOKCLICK
     TabOrder = 1
-    Left = 410
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
+    Left = 417
     Height = 29
-    Top = 406
-    Width = 75
+    Top = 412
+    Width = 68
   end
   object cmdCancel: TBitBtn
     Anchors = [akRight, akBottom]
-    BorderSpacing.Right = 6
+    AutoSize = True
+    BorderSpacing.Around = 6
     BorderSpacing.InnerBorder = 2
     Caption = 'Cancel'
     Constraints.MaxHeight = 29
@@ -442,13 +474,17 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
     NumGlyphs = 0
     TabOrder = 2
     AnchorSideRight.Control = cmdOK
-    Left = 329
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
+    Left = 331
     Height = 29
-    Top = 406
-    Width = 75
+    Top = 412
+    Width = 80
   end
   object btnHelp: TBitBtn
     Anchors = [akLeft, akBottom]
+    AutoSize = True
+    BorderSpacing.Around = 6
     BorderSpacing.InnerBorder = 2
     Caption = '&Help'
     Constraints.MaxHeight = 29
@@ -456,14 +492,17 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
     Kind = bkHelp
     NumGlyphs = 0
     TabOrder = 3
+    AnchorSideLeft.Control = Owner
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
     Left = 6
     Height = 29
-    Top = 406
+    Top = 412
     Width = 75
   end
   object popSignal: TPopupMenu
     left = 408
-    top = 20
+    top = 96
     object mnuHandledByProgram: TMenuItem
       AutoCheck = True
       Caption = 'Handled by Program'
