improved doceditor: session info, anchors, output directory  from Graeme
 SVN 8953@trunk

--- a/doceditor/frmabout.lfm
+++ b/doceditor/frmabout.lfm
@@ -1,302 +1,59 @@
 object AboutForm: TAboutForm
+  ActiveControl = Button1
   BorderStyle = bsDialog
   Caption = 'About this application'
   ClientHeight = 299
-  ClientWidth = 400
+  ClientWidth = 529
   PixelsPerInch = 90
   Position = poMainFormCenter
-  HorzScrollBar.Page = 399
+  HorzScrollBar.Page = 528
   VertScrollBar.Page = 298
   Left = 333
   Height = 299
   Top = 149
-  Width = 400
+  Width = 529
   object LThisApplication: TLabel
-    BorderSpacing.OnChange = nil
     Caption = 'Lazarus Documentation Editor'
     Color = clNone
+    ParentColor = False
     Left = 16
-    Height = 12
+    Height = 17
     Top = 8
-    Width = 167
+    Width = 220
   end
   object LCopyRight1: TLabel
-    BorderSpacing.OnChange = nil
     Caption = 'This application is (c) by  Michael Van Canneyt and the Lazarus team'
     Color = clNone
+    ParentColor = False
     Left = 16
-    Height = 12
+    Height = 17
     Top = 48
-    Width = 393
+    Width = 503
   end
   object LCopyRight2: TLabel
-    BorderSpacing.OnChange = nil
     Caption = 'It is released under the terms of the  GENERAL PUBLIC LICENSE:'
     Color = clNone
+    ParentColor = False
     Left = 16
-    Height = 12
+    Height = 17
     Top = 64
-    Width = 368
+    Width = 491
   end
   object Button1: TButton
-    Anchors = [akTop, akLeft, akRight, akBottom]
-    BorderSpacing.OnChange = nil
+    Anchors = [akRight, akBottom]
+    BorderSpacing.InnerBorder = 2
     Cancel = True
     Caption = '&Close'
     Default = True
     ModalResult = 1
     TabOrder = 0
-    Left = 312
+    Left = 423
     Height = 24
     Top = 264
-    Width = 75
+    Width = 90
   end
   object MCopyRight: TMemo
     Anchors = [akTop, akLeft, akRight, akBottom]
-    BorderSpacing.OnChange = nil
-    Lines.Strings = (
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-    )
     ReadOnly = True
     ScrollBars = ssBoth
     TabOrder = 1
@@ -304,6 +61,6 @@ object AboutForm: TAboutForm
     Left = 16
     Height = 175
     Top = 80
-    Width = 368
+    Width = 497
   end
 end
